--- a/ACL4SSR_Online_Full-R.ini
+++ b/ACL4SSR_Online_Full-R.ini
@@ -41,10 +41,10 @@ custom_proxy_group=📺HBO`select`[]🇺🇲美国Auto`[]🇺🇲美国节点`[]
 custom_proxy_group=🌍国外媒体`select`[]♻️自动选择`[]🇭🇰香港Auto`[]🇺🇲美国Auto`[]🇬🇧英国Auto`[]🚀节点选择`[]🚀手动切换`[]DIRECT
 custom_proxy_group=Ⓜ️MSFT`select`[]DIRECT`[]🚀节点选择`[]🇺🇲美国节点`[]🇬🇧英国节点`[]🇭🇰香港节点`[]🇨🇳台湾节点`[]🇸🇬狮城节点`[]🇯🇵日本节点`[]🇰🇷韩国节点`[]🚀手动切换
 custom_proxy_group=🍎Apple`select`[]DIRECT`[]🚀节点选择`[]🇺🇲美国节点`[]🇬🇧英国节点`[]🇭🇰香港节点`[]🇨🇳台湾节点`[]🇸🇬狮城节点`[]🇯🇵日本节点`[]🇰🇷韩国节点`[]🚀手动切换
-custom_proxy_group=🚀节点选择`select`[]♻️自动选择`[]🇭🇰香港Auto`[]🇺🇲美国Auto[]🇬🇧英国Auto`[]🚀手动切换`[]DIRECT
+custom_proxy_group=🚀节点选择`select`[]♻️自动选择`[]🇭🇰香港Auto`[]🇺🇲美国Auto`[]🇬🇧英国Auto`[]🚀手动切换`[]DIRECT
 custom_proxy_group=🎯全球直连`select`[]DIRECT`[]🚀节点选择
 custom_proxy_group=🛑广告拦截`select`[]REJECT`[]DIRECT
-custom_proxy_group=🐟漏网之鱼`select`[]DIRECT`[]🇭🇰香港Auto`[]🇺🇲美国Auto[]🇬🇧英国Auto`[]🚀节点选择`[]🚀手动切换
+custom_proxy_group=🐟漏网之鱼`select`[]DIRECT`[]🇭🇰香港Auto`[]🇺🇲美国Auto`[]🇬🇧英国Auto`[]🚀节点选择`[]🚀手动切换
 custom_proxy_group=🚀手动切换`select`.*
 custom_proxy_group=🇭🇰香港节点`select`(港|HK|Hong Kong)
 custom_proxy_group=🇺🇲美国节点`select`(美|US|United States)
