--- a/ACL4SSR_Online_Full-R.ini
+++ b/ACL4SSR_Online_Full-R.ini
@@ -24,7 +24,7 @@ ruleset=🎯全球直连,https://raw.githubusercontent.com/ACL4SSR/ACL4SSR/maste
 ;ruleset=Ⓜ️MSFT,https://raw.githubusercontent.com/ACL4SSR/ACL4SSR/master/Clash/OneDrive.list
 ;ruleset=Ⓜ️MSFT,https://raw.githubusercontent.com/ACL4SSR/ACL4SSR/master/Clash/Microsoft.list
 ;ruleset=🍎Apple,https://raw.githubusercontent.com/ACL4SSR/ACL4SSR/master/Clash/Apple.list
-ruleset=🌍国外媒体,https://raw.githubusercontent.com/ACL4SSR/ACL4SSR/master/Clash/ProxyMedia.list
+;ruleset=🌍国外媒体,https://raw.githubusercontent.com/ACL4SSR/ACL4SSR/master/Clash/ProxyMedia.list
 ruleset=🚀节点选择,https://raw.githubusercontent.com/ACL4SSR/ACL4SSR/master/Clash/ProxyGFWlist.list
 ruleset=🎯全球直连,https://raw.githubusercontent.com/ACL4SSR/ACL4SSR/master/Clash/ChinaDomain.list
 ruleset=🎯全球直连,https://raw.githubusercontent.com/ACL4SSR/ACL4SSR/master/Clash/ChinaCompanyIp.list
@@ -39,7 +39,7 @@ custom_proxy_group=🎥Netflix`select`[]🇭🇰香港Auto`[]♻️自动选择`
 custom_proxy_group=📺BBC`select`[]🇬🇧英国Auto`[]🇬🇧英国节点`[]🚀手动切换
 custom_proxy_group=📺HBO`select`[]🇺🇲美国Auto`[]🇺🇲美国节点`[]🚀手动切换
 custom_proxy_group=📺Porn`select`[]♻️自动选择`[]🇭🇰香港Auto`[]🇺🇲美国Auto`[]🇬🇧英国Auto`[]🚀节点选择`[]🚀手动切换`[]DIRECT
-custom_proxy_group=🌍国外媒体`select`[]♻️自动选择`[]🇭🇰香港Auto`[]🇺🇲美国Auto`[]🇬🇧英国Auto`[]🚀节点选择`[]🚀手动切换`[]DIRECT
+;custom_proxy_group=🌍国外媒体`select`[]♻️自动选择`[]🇭🇰香港Auto`[]🇺🇲美国Auto`[]🇬🇧英国Auto`[]🚀节点选择`[]🚀手动切换`[]DIRECT
 custom_proxy_group=🚀节点选择`select`[]♻️自动选择`[]🇭🇰香港Auto`[]🇺🇲美国Auto`[]🇬🇧英国Auto`[]🚀手动切换`[]DIRECT
 ;custom_proxy_group=Ⓜ️MSFT`select`[]DIRECT`[]♻️自动选择`[]🚀节点选择`[]🚀手动切换
 ;custom_proxy_group=🍎Apple`select`[]DIRECT`[]♻️自动选择`[]🚀节点选择`[]🚀手动切换
