--- a/ACL4SSR_Online_Full-R.ini
+++ b/ACL4SSR_Online_Full-R.ini
@@ -34,13 +34,13 @@ ruleset=🐟漏网之鱼,[]FINAL
 ;设置规则标志位
 
 ;设置分组标志位
-custom_proxy_group=📹Youtube`select`[]🇭🇰香港Auto`[]♻️自动选择`[]🇸🇬狮城节点`[]🇭🇰香港节点`[]🇨🇳台湾节点`[]🇯🇵日本节点`[]🇺🇲美国节点`[]🇬🇧英国节点`[]🇰🇷韩国节点`[]🚀手动切换
-custom_proxy_group=🎥Netflix`select`[]🇭🇰香港Auto`[]♻️自动选择`[]🇸🇬狮城节点`[]🇭🇰香港节点`[]🇨🇳台湾节点`[]🇯🇵日本节点`[]🇺🇲美国节点`[]🇬🇧英国节点`[]🇰🇷韩国节点`[]🚀手动切换
+custom_proxy_group=📹Youtube`select`[]🇭🇰香港Auto`[]♻️自动选择`[]🇸🇬狮城节点`[]🇭🇰香港节点`[]🇨🇳台湾节点`[]🇯🇵日本节点`[]🇺🇲美国节点`[]🇬🇧英国节点`[]🚀手动切换
+custom_proxy_group=🎥Netflix`select`[]🇭🇰香港Auto`[]♻️自动选择`[]🇸🇬狮城节点`[]🇭🇰香港节点`[]🇨🇳台湾节点`[]🇯🇵日本节点`[]🇺🇲美国节点`[]🇬🇧英国节点`[]🚀手动切换
 custom_proxy_group=📺BBC`select`[]🇬🇧英国Auto`[]🇬🇧英国节点`[]🚀手动切换
 custom_proxy_group=📺HBO`select`[]🇺🇲美国Auto`[]🇺🇲美国节点`[]🚀手动切换
-custom_proxy_group=📺Porn`select`[]♻️自动选择`[]🇭🇰香港Auto`[]🇺🇲美国Auto`[]🇬🇧英国Auto`[]🚀节点选择`[]🚀手动切换`[]DIRECT
+custom_proxy_group=📺Porn`select`[]♻️自动选择`[]🇭🇰香港Auto`[]🇺🇲美国Auto`[]🇬🇧英国Auto`[]🚀节点选择`[]DIRECT
 ;custom_proxy_group=🌍国外媒体`select`[]♻️自动选择`[]🇭🇰香港Auto`[]🇺🇲美国Auto`[]🇬🇧英国Auto`[]🚀节点选择`[]🚀手动切换`[]DIRECT
-custom_proxy_group=🚀节点选择`select`[]♻️自动选择`[]🇭🇰香港Auto`[]🇺🇲美国Auto`[]🇬🇧英国Auto`[]🚀手动切换`[]DIRECT
+custom_proxy_group=🚀节点选择`select`[]♻️自动选择`[]🇭🇰香港Auto`[]🇺🇲美国Auto`[]🇬🇧英国Auto`[]🇸🇬狮城节点`[]🇨🇳台湾节点`[]🇯🇵日本节点`[]🚀手动切换`[]DIRECT
 ;custom_proxy_group=Ⓜ️MSFT`select`[]DIRECT`[]♻️自动选择`[]🚀节点选择`[]🚀手动切换
 ;custom_proxy_group=🍎Apple`select`[]DIRECT`[]♻️自动选择`[]🚀节点选择`[]🚀手动切换
 custom_proxy_group=🎯全球直连`select`[]DIRECT`[]♻️自动选择`[]🚀节点选择`[]🚀手动切换
@@ -52,7 +52,7 @@ custom_proxy_group=🇬🇧英国节点`select`(UK)
 custom_proxy_group=🇨🇳台湾节点`select`(台|新北|彰化|TW|Taiwan)
 custom_proxy_group=🇯🇵日本节点`select`(日本|[^-]日|JP|Japan)
 custom_proxy_group=🇸🇬狮城节点`select`(新加坡|坡|狮城|SG|Singapore)
-custom_proxy_group=🇰🇷韩国节点`select`(KR|Korea|KOR|首尔|韩|韓)
+;custom_proxy_group=🇰🇷韩国节点`select`(KR|Korea|KOR|首尔|韩|韓)
 custom_proxy_group=🚀手动切换`select`.*
 custom_proxy_group=🇭🇰香港Auto`url-test`(港|HK|Hong Kong)`http://www.gstatic.com/generate_204`300,,300
 custom_proxy_group=🇺🇲美国Auto`url-test`(美|US|United States)`http://www.gstatic.com/generate_204`300,,300
