--- a/ACL4SSR_Online_Full-R.ini
+++ b/ACL4SSR_Online_Full-R.ini
@@ -35,7 +35,7 @@ ruleset=🐟漏网之鱼,[]FINAL
 
 ;设置分组标志位
 custom_proxy_group=📹Youtube`select`[]🇭🇰香港Auto`[]♻️自动选择`[]🇸🇬狮城节点`[]🇭🇰香港节点`[]🇨🇳台湾节点`[]🇯🇵日本节点`[]🇺🇲美国节点`[]🇬🇧英国节点`[]🚀手动切换
-custom_proxy_group=🎥Netflix`select`[]🇭🇰香港Auto`[]♻️自动选择`[]🇸🇬狮城节点`[]🇭🇰香港节点`[]🇨🇳台湾节点`[]🇯🇵日本节点`[]🇺🇲美国节点`[]🇬🇧英国节点`[]🚀手动切换
+custom_proxy_group=🎥Netflix`select`[]🇸🇬狮城节点`[]♻️自动选择`[]🇭🇰香港Auto`[]🇭🇰香港节点`[]🇨🇳台湾节点`[]🇯🇵日本节点`[]🇺🇲美国节点`[]🇬🇧英国节点`[]🚀手动切换
 custom_proxy_group=📺BBC`select`[]🇬🇧英国Auto`[]🇬🇧英国节点`[]🚀手动切换
 custom_proxy_group=📺HBO`select`[]🇺🇲美国Auto`[]🇺🇲美国节点`[]🚀手动切换
 custom_proxy_group=📺Porn`select`[]♻️自动选择`[]🇭🇰香港Auto`[]🇺🇲美国Auto`[]🇬🇧英国Auto`[]🚀节点选择`[]DIRECT
