--- a/ACL4SSR_Online_Full-R.ini
+++ b/ACL4SSR_Online_Full-R.ini
@@ -16,9 +16,9 @@ ruleset=📹Youtube,https://raw.githubusercontent.com/ACL4SSR/ACL4SSR/master/Cla
 ruleset=🎥Netflix,https://raw.githubusercontent.com/ACL4SSR/ACL4SSR/master/Clash/Ruleset/Netflix.list
 ruleset=📺BBC,https://raw.githubusercontent.com/blackmatrix7/ios_rule_script/master/rule/Clash/BBC/BBC.list
 ruleset=📺HBO,https://raw.githubusercontent.com/blackmatrix7/ios_rule_script/master/rule/Clash/HBO/HBO.list
-ruleset=📺Disney,https://raw.githubusercontent.com/blackmatrix7/ios_rule_script/master/rule/Shadowrocket/Disney/Disney.list
-ruleset=📺Porn,https://raw.githubusercontent.com/ACL4SSR/ACL4SSR/master/Clash/Ruleset/Porn.list
-ruleset=📺Porn,https://raw.githubusercontent.com/ACL4SSR/ACL4SSR/master/Clash/Ruleset/Pornhub.list
+;ruleset=📺Disney,https://raw.githubusercontent.com/blackmatrix7/ios_rule_script/master/rule/Shadowrocket/Disney/Disney.list
+;ruleset=📺Porn,https://raw.githubusercontent.com/ACL4SSR/ACL4SSR/master/Clash/Ruleset/Porn.list
+;ruleset=📺Porn,https://raw.githubusercontent.com/ACL4SSR/ACL4SSR/master/Clash/Ruleset/Pornhub.list
 ruleset=🛑广告拦截,https://raw.githubusercontent.com/ACL4SSR/ACL4SSR/master/Clash/BanAD.list
 ruleset=🛑广告拦截,https://raw.githubusercontent.com/ACL4SSR/ACL4SSR/master/Clash/BanProgramAD.list
 ruleset=🎯全球直连,https://raw.githubusercontent.com/ACL4SSR/ACL4SSR/master/Clash/GoogleCN.list
@@ -39,8 +39,8 @@ custom_proxy_group=📹Youtube`select`[]🇭🇰香港Auto`[]♻️自动选择`
 custom_proxy_group=🎥Netflix`select`[]🇸🇬狮城节点`[]♻️自动选择`[]🇭🇰香港Auto`[]🇭🇰香港节点`[]🇨🇳台湾节点`[]🇯🇵日本节点`[]🇺🇲美国节点`[]🇬🇧英国节点`[]🚀手动切换
 custom_proxy_group=📺BBC`select`[]🇬🇧英国Auto`[]🇬🇧英国节点`[]🚀手动切换
 custom_proxy_group=📺HBO`select`[]🇺🇲美国Auto`[]🇺🇲美国节点`[]🚀手动切换
-custom_proxy_group=📺Disney`select`[]🇭🇰香港Auto`[]🇭🇰香港节点`[]🇸🇬狮城节点`[]🇨🇳台湾节点`[]🚀手动切换
-custom_proxy_group=📺Porn`select`[]♻️自动选择`[]🇭🇰香港Auto`[]🇺🇲美国Auto`[]🇬🇧英国Auto`[]🚀节点选择`[]DIRECT
+;custom_proxy_group=📺Disney`select`[]🇭🇰香港Auto`[]🇭🇰香港节点`[]🇸🇬狮城节点`[]🇨🇳台湾节点`[]🚀手动切换
+;custom_proxy_group=📺Porn`select`[]♻️自动选择`[]🇭🇰香港Auto`[]🇺🇲美国Auto`[]🇬🇧英国Auto`[]🚀节点选择`[]DIRECT
 ;custom_proxy_group=🌍国外媒体`select`[]♻️自动选择`[]🇭🇰香港Auto`[]🇺🇲美国Auto`[]🇬🇧英国Auto`[]🚀节点选择`[]🚀手动切换`[]DIRECT
 custom_proxy_group=🚀节点选择`select`[]♻️自动选择`[]🇭🇰香港Auto`[]🇺🇲美国Auto`[]🇬🇧英国Auto`[]🇸🇬狮城节点`[]🇨🇳台湾节点`[]🇯🇵日本节点`[]🚀手动切换`[]DIRECT
 ;custom_proxy_group=Ⓜ️MSFT`select`[]DIRECT`[]♻️自动选择`[]🚀节点选择`[]🚀手动切换
@@ -66,5 +66,3 @@ enable_rule_generator=true
 overwrite_original_rules=true
 
 ;clash_rule_base=https://raw.githubusercontent.com/ACL4SSR/ACL4SSR/master/Clash/GeneralClashConfig.yml
-
-;luck
