--- a/ACL4SSR_Online_Full-R.ini
+++ b/ACL4SSR_Online_Full-R.ini
@@ -43,11 +43,11 @@ custom_proxy_group=🚀节点选择`select`[]♻️自动选择`[]🇭🇰Asia A
 custom_proxy_group=🛑广告拦截`select`[]REJECT`[]DIRECT
 custom_proxy_group=🎯全球直连`select`[]DIRECT`[]♻️自动选择`[]🚀节点选择`[]🚀手动切换
 custom_proxy_group=🐟漏网之鱼`select`[]♻️自动选择`[]🇭🇰Asia Auto`[]🇺🇲美国Auto`[]🇬🇧英国Auto`[]🇺🇲美国节点`[]🇬🇧英国节点`[]🚀节点选择`[]DIRECT
-custom_proxy_group=🇭🇰Asia`select`(港|香港｜HK|Hong Kong|台|新北|彰化|TW|Taiwan|新加坡|坡|狮城|SG|Singapore|日本|[^-]日|JP|Japan)
+custom_proxy_group=🇭🇰Asia`select`(港|香港|HK|Hong Kong|台|新北|彰化|TW|Taiwan|新加坡|坡|狮城|SG|Singapore|日本|[^-]日|JP|Japan)
 custom_proxy_group=🇺🇲美国节点`select`(美|US|United States)
 custom_proxy_group=🇬🇧英国节点`select`(UK)
 custom_proxy_group=🚀手动切换`select`.*
-custom_proxy_group=🇭🇰Asia Auto`url-test`(港|香港｜HK|Hong Kong|台|新北|彰化|TW|Taiwan|新加坡|坡|狮城|SG|Singapore|日本|[^-]日|JP|Japan)`http://www.gstatic.com/generate_204`600,,50
+custom_proxy_group=🇭🇰Asia Auto`url-test`(港|香港|HK|Hong Kong|台|新北|彰化|TW|Taiwan|新加坡|坡|狮城|SG|Singapore|日本|[^-]日|JP|Japan)`http://www.gstatic.com/generate_204`600,,50
 custom_proxy_group=🇺🇲美国Auto`url-test`(美|US|United States)`http://www.gstatic.com/generate_204`600,,50
 custom_proxy_group=🇬🇧英国Auto`url-test`(UK)`http://www.gstatic.com/generate_204`600,,50
 custom_proxy_group=♻️自动选择`url-test`.*`http://www.gstatic.com/generate_204`600,,50
