--- a/ACL4SSR_Online_Full-R.ini
+++ b/ACL4SSR_Online_Full-R.ini
@@ -18,14 +18,14 @@ ruleset=📺BBC,https://raw.githubusercontent.com/blackmatrix7/ios_rule_script/m
 ruleset=📺HBO,https://raw.githubusercontent.com/blackmatrix7/ios_rule_script/master/rule/Clash/HBO/HBO.list
 ruleset=🛑广告拦截,https://raw.githubusercontent.com/ACL4SSR/ACL4SSR/master/Clash/BanAD.list
 ruleset=🛑广告拦截,https://raw.githubusercontent.com/ACL4SSR/ACL4SSR/master/Clash/BanProgramAD.list
-ruleset=🚀节点选择,https://raw.githubusercontent.com/ACL4SSR/ACL4SSR/master/Clash/ProxyGFWlist.list
 ruleset=🎯全球直连,https://raw.githubusercontent.com/ACL4SSR/ACL4SSR/master/Clash/GoogleCN.list
 ;ruleset=🎯全球直连,https://raw.githubusercontent.com/ACL4SSR/ACL4SSR/master/Clash/ChinaDomain.list
 ;ruleset=🎯全球直连,https://raw.githubusercontent.com/ACL4SSR/ACL4SSR/master/Clash/ChinaCompanyIp.list
 ruleset=🎯全球直连,https://raw.githubusercontent.com/ACL4SSR/ACL4SSR/master/Clash/Download.list
 ruleset=🎯全球直连,[]GEOIP,CN
-ruleset=🎯全球直连,*.gov.hk
-ruleset=🎯全球直连,*.uchicago.edu
+ruleset=🎯全球直连,[]DOMAIN-SUFFIX,gov.hk
+ruleset=🎯全球直连,[]DOMAIN-SUFFIX,.edu
+ruleset=🚀节点选择,https://raw.githubusercontent.com/ACL4SSR/ACL4SSR/master/Clash/ProxyGFWlist.list
 ruleset=🐟漏网之鱼,[]FINAL
 ;ruleset=📺Disney,https://raw.githubusercontent.com/blackmatrix7/ios_rule_script/master/rule/Shadowrocket/Disney/Disney.list
 ;ruleset=📺Porn,https://raw.githubusercontent.com/ACL4SSR/ACL4SSR/master/Clash/Ruleset/Porn.list
