--- a/ACL4SSR_Online_Full-R.ini
+++ b/ACL4SSR_Online_Full-R.ini
@@ -14,6 +14,8 @@ ruleset=🎯全球直连,https://raw.githubusercontent.com/ACL4SSR/ACL4SSR/maste
 ruleset=🎯全球直连,https://raw.githubusercontent.com/ACL4SSR/ACL4SSR/master/Clash/UnBan.list
 ruleset=🎯全球直连,[]DOMAIN-SUFFIX,gov.hk
 ruleset=🎯全球直连,[]DOMAIN-SUFFIX,.edu
+ruleset=🎯全球直连,[]DOMAIN-SUFFIX,uchicago.edu
+ruleset=🎯全球直连,[]KEYWORD,uchicago
 ruleset=📹Youtube,https://raw.githubusercontent.com/ACL4SSR/ACL4SSR/master/Clash/Ruleset/YouTube.list
 ruleset=🎥Netflix,https://raw.githubusercontent.com/ACL4SSR/ACL4SSR/master/Clash/Ruleset/Netflix.list
 ruleset=📺BBC,https://raw.githubusercontent.com/blackmatrix7/ios_rule_script/master/rule/Clash/BBC/BBC.list
